--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -3,6 +3,10 @@ name: onecx-announcement
 version: 0.0.0
 appversion: 0.0.0
 dependencies:
+- name: helm-product
+  version: ^0
+  repository: oci://ghcr.io/onecx/charts
+  alias: product
 - name: onecx-announcement-svc
   version: "*-0"
   repository: oci://ghcr.io/onecx/charts
