--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -1,2 +1,11 @@
 deployment:
   svc: true
+
+product:
+  info:
+    data:
+      description: "Announcement"
+      imageUrl: ""
+      iconName: "bullhorn"
+      dispalyName: "Onecx announcement"
+      basePath: "/announcement"
