--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -12,3 +12,13 @@ dependencies:
   repository: oci://ghcr.io/onecx/charts
   condition: "deployment.svc"
   alias: "svc"
+- name: onecx-announcement-bff
+  version: "*-0"
+  repository: oci://ghcr.io/onecx/charts
+  condition: "deployment.svc"
+  alias: "bff"
+- name: onecx-announcement-ui
+  version: "*-0"
+  repository: oci://ghcr.io/onecx/charts
+  condition: "deployment.svc"
+  alias: "ui"
