--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -15,10 +15,10 @@ dependencies:
 - name: onecx-announcement-bff
   version: "*-0"
   repository: oci://ghcr.io/onecx/charts
-  condition: "deployment.svc"
+  condition: "deployment.bff"
   alias: "bff"
 - name: onecx-announcement-ui
   version: "*-0"
   repository: oci://ghcr.io/onecx/charts
-  condition: "deployment.svc"
+  condition: "deployment.ui"
   alias: "ui"
