--- a/userdocs/antora.yml
+++ b/userdocs/antora.yml
@@ -4,7 +4,5 @@ version: latest
 start_page: general:index.adoc
 nav:
  - modules/general/nav.adoc
- - modules/onecx-announcement-ui/nav.adoc
- - modules/onecx-announcement-bff/nav.adoc
- - modules/onecx-announcement-svc/nav.adoc
- 
+ - modules/ui/nav.adoc
+
