Add provider info in values.yaml

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -6,8 +6,10 @@ deployment:
 product:
   info:
     data:
-      description: "OneCX Announcement"
+      description: "Manage Announcements"
       imageUrl: ""
-      iconName: "comment"
+      iconName: comment
       displayName: "OneCX Announcement"
-      basePath: "/announcement"
+      basePath: /announcement
+      provider: "OneCX Team"
+      classifications: [ "Administration" ]
