--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -1,10 +1,2 @@
-name: onecx-announcement
-title: Announcement Management
+name: documentation
 version: latest
-start_page: general:index.adoc
-nav:
- - modules/general/nav.adoc
- - modules/onecx-announcement-ui/nav.adoc
- - modules/onecx-announcement-bff/nav.adoc
- - modules/onecx-announcement-svc/nav.adoc
- 
